# learning-opengl

./: CMakeLists.txt
include/: camera.hpp  filter.hpp  object.hpp  serial_reader.hpp  shader.hpp  texture.hpp  util.hpp  window.hpp
resources/: mvp_1.fragmentshader  mvp_1.vertexshader  with_color.fs  with_color.vs  with_texture.vs
resources/shaders/: with_texture.fs
src/: camera.cpp  example.fragmentshader  filter.cpp  main.cpp  object.cpp  serial_reader.cpp  shader.cpp  texture.cpp  util.cpp  window.cpp
